--- a/sails-bin/po/sails/en.po
+++ b/sails-bin/po/sails/en.po
@@ -227,7 +227,7 @@ msgstr ""
 msgid "No products under this category"
 msgstr ""
 
-msgid "Empowered By Your Curiosity"
+msgid "Power Your Curiosity"
 msgstr ""
 
 msgid "Update {0}"
