--- a/po/sails/zh.po
+++ b/po/sails/zh.po
@@ -440,6 +440,31 @@ msgstr "探索 Store 商店"
 msgid "FLibrary Circle"
 msgstr "Circle 社区"
 
+msgid "We create learning guides"
+msgstr "我们创作学习指南"
+
+msgid ""
+"Tired of duplicated descriptions and hard-to-locate key-points in textbooks? "
+"Frustrated with short but impossible-to-understand others' notes lacking "
+"coherent logic? We strike a balance in between: learning guides. They are "
+"coherent on first read and always to-the-point, providing an enjoyable "
+"learning or referencing experience."
+msgstr ""
+"对内容冗长且难以翻阅的教科书感到厌倦？他人书写的笔记难以理解且逻辑跳跃？我们"
+"衷于找到教材和笔记间的平衡：学习指南。它们精简但不失逻辑，深度和示例并存，无"
+"论是第一次阅读还是快速查阅都非常高效。"
+
+msgid "Join the community"
+msgstr "加入社区"
+
+msgid ""
+"At FLibrary, you can effortlessly connect to minds behind masterpieces. Join "
+"the community, meet creators, and collaborate on new contents. Contribute "
+"your curiosity today!"
+msgstr ""
+"在 FLibrary Circle，你可以发现优秀的内容，更可以遇见内容背后优秀的创作者。加"
+"入社区，和作者面对面，一起创作新的内容。探索好奇心从今天开始！"
+
 msgid "Features"
 msgstr "特性"
 
@@ -449,7 +474,9 @@ msgstr "全云端"
 msgid ""
 "FLibrary is your personalized learning hub. From notes to past papers, "
 "everything subscribed on cloud for your access anytime, anywhere."
-msgstr "FLibrary 是您个性化的内容收藏馆。从笔记到解析，您可以随时随地从云端访问所有您订阅的内容。"
+msgstr ""
+"FLibrary 是您个性化的内容收藏馆。从笔记到解析，您可以随时随地从云端访问所有您"
+"订阅的内容。"
 
 msgid "Streamlined Updates"
 msgstr "轻松分发"
@@ -465,7 +492,9 @@ msgstr "精心挑选"
 msgid ""
 "Only discover the best-in-class. Spend more time to dive in but not to "
 "wander through."
-msgstr "只有最好的内容才值得您去探索。我们的精心挑选让您专注学习和探索，而不是搜集无用的资源。"
+msgstr ""
+"只有最好的内容才值得您去探索。我们的精心挑选让您专注学习和探索，而不是搜集无"
+"用的资源。"
 
 msgid "You are Protected"
 msgstr "安全无虞"
@@ -481,7 +510,8 @@ msgstr "多语言支持"
 msgid ""
 "A global learner's community is at heart to our vision, that's why we have "
 "built-in multilingual supports."
-msgstr "全球化的学习内容社区是我们愿景的核心，为此在设计之初我们就融入了多语言支持。"
+msgstr ""
+"全球化的学习内容社区是我们愿景的核心，为此在设计之初我们就融入了多语言支持。"
 
 msgid "No Ads Forever"
 msgstr "没有广告"
@@ -489,4 +519,59 @@ msgstr "没有广告"
 msgid ""
 "Ads are simply incompatible with our curiosity. Take our commitment: no ads "
 "forever."
-msgstr "广告和我们的好奇心格格不入，就这么简单。我们的承诺：永远没有广告。"
+msgstr "广告和我们的好奇心格格不入，就这么简单。我们承诺：永远没有广告。"
+
+msgid "We are just getting started."
+msgstr "我们才刚刚开始"
+
+msgid "Join Us."
+msgstr "加入我们"
+
+msgid "Join Us"
+msgstr "加入我们"
+
+msgid "We make contents, FLibrary, and the community. Join us as"
+msgstr "我们创作内容，搭建 FLibrary 和社区，加入我们。"
+
+msgid "Creators"
+msgstr "创作者"
+
+msgid ""
+"Skilled at certain fields or courses? Create learning guides on subjects or "
+"anything creative (like building a rocket), either independent or based on a "
+"course taught at your university, and receive rewards to your knowledge and "
+"contribution."
+msgstr ""
+"在某一领域或课程独树一帜？为学科或任何创造（比如自制火箭）编写指南，可以独立"
+"立项也可以和大学内的课程深度结合。并通过你的知识和贡献获得奖励。"
+
+msgid "Working proficiency in LaTeX"
+msgstr "熟练运用 LaTeX"
+
+msgid "Concrete knowledge in certain fields"
+msgstr "特定领域的扎实知识基础"
+
+msgid "Stick to our principles and standards"
+msgstr "接受我们的创作原则和内容标准"
+
+msgid "Apply"
+msgstr "申请"
+
+msgid "Developers"
+msgstr "开发者"
+
+msgid ""
+"Our code is what builds our dreams. Join us as a developer, help inform "
+"what's the next feature, and make dreams true with your unique skills."
+msgstr ""
+"代码是我们的造梦引擎。作为开发者加入我们，帮助我们寻找下一个功能，并用你独特"
+"的技能让梦想成为现实。"
+
+msgid "Working proficiency in Rust / JavaScript"
+msgstr "熟练使用 Rust / JavaScript"
+
+msgid "Basic knowledge in network programming"
+msgstr "基本的网络编程知识"
+
+msgid "Strive for perfection."
+msgstr "追求优秀的代码质量"
