--- a/sails-bin/po/sails/sails.pot
+++ b/sails-bin/po/sails/sails.pot
@@ -438,7 +438,7 @@ msgstr ""
 msgid "All Cloud"
 msgstr ""
 
-msgid "FLibrary is your personalized learning hub. From notes to past papers, everything subscribed on cloud for your access anytime, anywhere."
+msgid "FLibrary is your personalized learning hub. From notes to past papers, everything subscribed is on cloud for your access anytime, anywhere."
 msgstr ""
 
 msgid "Streamlined Updates"
