--- a/sails-bin/po/sails/en.po
+++ b/sails-bin/po/sails/en.po
@@ -23,6 +23,9 @@ msgstr ""
 msgid "Messages"
 msgstr ""
 
+msgid "Creator Center"
+msgstr ""
+
 msgid "Portal"
 msgstr ""
 
@@ -39,6 +42,66 @@ msgid "Name"
 msgstr ""
 
 msgid "Downloaded by"
+msgstr ""
+
+msgid "Digital Content Creator Center"
+msgstr ""
+
+msgid "Create a Digital Content"
+msgstr ""
+
+msgid "Manage your Digital Contents"
+msgstr ""
+
+msgid "Last Modified"
+msgstr ""
+
+msgid "Digital Content \"{}\""
+msgstr ""
+
+msgid "Info"
+msgstr ""
+
+msgid "Manage"
+msgstr ""
+
+msgid "Apply to products"
+msgstr ""
+
+msgid "Storage Type"
+msgstr ""
+
+msgid "Storage Detail"
+msgstr ""
+
+msgid "Time Created"
+msgstr ""
+
+msgid "Path to release asset"
+msgstr ""
+
+msgid "Update the Digital Content"
+msgstr ""
+
+msgid "Upload file"
+msgstr ""
+
+msgid "Create product"
+msgstr ""
+
+msgid "Create the Digital Content"
+msgstr ""
+
+msgid "Fill in relevant information to create a digital content"
+msgstr ""
+
+msgid "Storage Type (cannot be changed afterwards)"
+msgstr ""
+
+msgid "Manually upload file"
+msgstr ""
+
+msgid "Use Release Asset"
 msgstr ""
 
 msgid "Chat"
@@ -259,9 +322,6 @@ msgstr ""
 msgid "Description"
 msgstr ""
 
-msgid "Create product"
-msgstr ""
-
 msgid "Fill in relevant information which users see in the store"
 msgstr ""
 
@@ -415,7 +475,7 @@ msgstr ""
 msgid "Digital Contents owned"
 msgstr ""
 
-msgid "Lat Modified"
+msgid "Manage Digital Contents"
 msgstr ""
 
 msgid "Orders placed"
