--- a/po/sails/en.po
+++ b/po/sails/en.po
@@ -493,15 +493,15 @@ msgstr ""
 msgid "FLibrary Circle"
 msgstr ""
 
-msgid "We create learning guides"
+msgid "Study guides for your courses"
 msgstr ""
 
 msgid ""
 "Tired of duplicated descriptions and hard-to-locate key-points in textbooks? "
 "Frustrated with short but impossible-to-understand others' notes lacking "
-"coherent logic? We strike a balance in between: learning guides. They are "
-"coherent on first read and always to-the-point, providing an enjoyable "
-"learning or referencing experience."
+"coherent logic? We strike a balance in between: study guides targeting "
+"specific courses you needed. They are coherent on first read and always to-"
+"the-point, providing an enjoyable learning or referencing experience."
 msgstr ""
 
 msgid "Join the community"
