--- a/po/sails/zh.po
+++ b/po/sails/zh.po
@@ -497,18 +497,18 @@ msgstr "探索 Store 商店"
 msgid "FLibrary Circle"
 msgstr "Circle 社区"
 
-msgid "We create learning guides"
-msgstr "我们创作学习指南"
+msgid "Study guides for your courses"
+msgstr "为课程定制的学习指南"
 
 msgid ""
 "Tired of duplicated descriptions and hard-to-locate key-points in textbooks? "
 "Frustrated with short but impossible-to-understand others' notes lacking "
-"coherent logic? We strike a balance in between: learning guides. They are "
-"coherent on first read and always to-the-point, providing an enjoyable "
-"learning or referencing experience."
+"coherent logic? We strike a balance in between: study guides targeting "
+"specific courses you needed. They are coherent on first read and always to-"
+"the-point, providing an enjoyable learning or referencing experience."
 msgstr ""
 "对内容冗长且难以翻阅的教科书感到厌倦？他人书写的笔记难以理解且逻辑跳跃？我们"
-"衷于找到教材和笔记间的平衡：学习指南。它们精简但不失逻辑，深度和示例并存，无"
+"衷于找到教材和笔记间的平衡：专门为您所需课程设计的学习指南。它们精简但不失逻辑，深度和示例并存，无"
 "论是第一次阅读还是快速查阅都非常高效。"
 
 msgid "Join the community"
