minor improvement on checkout and purchase

--- a/po/sails/sails.pot
+++ b/po/sails/sails.pot
@@ -354,6 +354,9 @@ msgstr ""
 msgid "Send message"
 msgstr ""
 
+msgid "Sign in to purchase"
+msgstr ""
+
 msgid "Sign in to contact the creator"
 msgstr ""
 
