--- a/sails-bin/po/sails/sails.pot
+++ b/sails-bin/po/sails/sails.pot
@@ -1,7 +1,8 @@
-
-msgid "FLibrary is the ultimate destination for discovering, discussing, and distributing learning guides."
+msgid ""
 msgstr ""
-"
+"Project-Id-Version: sails\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2018-06-15 16:33-0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -10,6 +11,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+
+msgid "FLibrary is the ultimate destination for discovering, discussing, and distributing learning guides."
+msgstr ""
 
 msgid "Store"
 msgstr ""
@@ -348,6 +352,9 @@ msgid "Contact the creator"
 msgstr ""
 
 msgid "Send message"
+msgstr ""
+
+msgid "Sign in to purchase"
 msgstr ""
 
 msgid "Sign in to contact the creator"
