--- a/sails-bin/po/sails/en.po
+++ b/sails-bin/po/sails/en.po
@@ -364,6 +364,9 @@ msgstr ""
 msgid "Send message"
 msgstr ""
 
+msgid "Sign in to purchase"
+msgstr ""
+
 msgid "Sign in to contact the creator"
 msgstr ""
 
