add PayPal support

--- a/po/sails/en.po
+++ b/po/sails/en.po
@@ -140,49 +140,13 @@ msgstr ""
 msgid "You haven't received any message."
 msgstr ""
 
+msgid "Order Details"
+msgstr ""
+
 msgid "Details of order #{0}"
 msgstr ""
 
 msgid "Order has been refunded or canceled"
-msgstr ""
-
-msgid "No actions needed"
-msgstr ""
-
-msgid "Order placed"
-msgstr ""
-
-msgid "Order paid"
-msgstr ""
-
-msgid "Order completed"
-msgstr ""
-
-msgid "Total"
-msgstr ""
-
-msgid "Price per unit"
-msgstr ""
-
-msgid "Quantity purchased"
-msgstr ""
-
-msgid "Address"
-msgstr ""
-
-msgid "Seller"
-msgstr ""
-
-msgid "Product ID"
-msgstr ""
-
-msgid "Timestamp"
-msgstr ""
-
-msgid "Order Status"
-msgstr ""
-
-msgid "Order Details"
 msgstr ""
 
 msgid ""
@@ -240,7 +204,31 @@ msgid ""
 "\">Contact us</a>"
 msgstr ""
 
+msgid "Total"
+msgstr ""
+
+msgid "Price per unit"
+msgstr ""
+
+msgid "Quantity purchased"
+msgstr ""
+
+msgid "Address"
+msgstr ""
+
 msgid "Buyer"
+msgstr ""
+
+msgid "Seller"
+msgstr ""
+
+msgid "Product ID"
+msgstr ""
+
+msgid "Timestamp"
+msgstr ""
+
+msgid "Order Status"
 msgstr ""
 
 msgid "Checkout"
@@ -252,9 +240,6 @@ msgstr ""
 msgid "ID"
 msgstr ""
 
-msgid "USD"
-msgstr ""
-
 msgid "Quantity in stock"
 msgstr ""
 
@@ -264,7 +249,28 @@ msgstr ""
 msgid "If content is completely digital, you may leave it blank."
 msgstr ""
 
+msgid "Payment method"
+msgstr ""
+
+msgid "AliPay (supports CNY only)"
+msgstr ""
+
+msgid "PayPal (supports all currency)"
+msgstr ""
+
 msgid "Submit"
+msgstr ""
+
+msgid "No actions needed"
+msgstr ""
+
+msgid "Order placed"
+msgstr ""
+
+msgid "Order paid"
+msgstr ""
+
+msgid "Order completed"
 msgstr ""
 
 msgid "Provide Credential"
@@ -292,9 +298,6 @@ msgstr ""
 msgid "No more subcategories"
 msgstr ""
 
-msgid "Price: USD {0}"
-msgstr ""
-
 msgid "No products under this category"
 msgstr ""
 
@@ -314,6 +317,9 @@ msgid "Product details"
 msgstr ""
 
 msgid "Category"
+msgstr ""
+
+msgid "Currency"
 msgstr ""
 
 msgid "Price"
