--- a/po/sails/en.po
+++ b/po/sails/en.po
@@ -273,6 +273,14 @@ msgstr ""
 msgid "Order completed"
 msgstr ""
 
+msgid ""
+"Use PayPal to complete your order. If you are not automatically redirected "
+"after approving the order, click \"Manual update\" button below."
+msgstr ""
+
+msgid "Manual update"
+msgstr ""
+
 msgid "Provide Credential"
 msgstr ""
 
