--- a/sails-bin/po/sails/sails.pot
+++ b/sails-bin/po/sails/sails.pot
@@ -429,7 +429,7 @@ msgstr ""
 msgid "Here you can manage your products and account"
 msgstr ""
 
-msgid "Change password"
+msgid "Manage your FLibrary ID"
 msgstr ""
 
 msgid "Create a product"
